getUri *improved from java6 to lambda *unit tests added